@@ -1,0 +1,13 @@
+package com.ridegroup.yop.bean.toft;
+
+public class NearbyCarCount {
+    private String count;
+
+    public String getCount() {
+        return count;
+    }
+
+    public void setCount(String count) {
+        this.count = count;
+    }
+}
